Changed server address

--- a/QueryMyCBR.ipynb
+++ b/QueryMyCBR.ipynb
@@ -30,12 +30,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 450,
    "metadata": {},
    "outputs": [],
    "source": [
-    "server = 'localhost'\n",
-    "#server = 'hv-6066.idi.ntnu.no'\n",
+    "#server = 'localhost'\n",
+    "server = 'hv-6066.idi.ntnu.no'\n",
     "\n",
     "port = '8080'\n",
     "url = 'http://' + server + ':' + port + '/'"
@@ -1076,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 449,
+   "execution_count": 451,
    "metadata": {},
    "outputs": [
     {
@@ -1312,7 +1312,7 @@
        "similarity      0.536116  "
       ]
      },
-     "execution_count": 449,
+     "execution_count": 451,
      "metadata": {},
      "output_type": "execute_result"
     }
