Updated scripts to new myCBR API
- updated calls
- added the data and sample project

--- a/ExampleGetCaseRep.ipynb
+++ b/ExampleGetCaseRep.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,38 +17,49 @@
     "import matplotlib.pyplot as plt\n",
     "import datetime\n",
     "\n",
-    "from pandas.io.json import json_normalize"
+    "from pandas import json_normalize"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "server = 'localhost'\n",
+    "#server = 'hv-6066.idi.ntnu.no'\n",
+    "\n",
+    "port = '8080'\n",
+    "base_url = 'http://' + server + ':' + port + '/'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# returns the list of concepts existing in the CBR system\n",
     "def get_concepts():\n",
-    "    raw = pd.DataFrame(requests.get(url + 'concepts/').json()) \n",
+    "    raw = pd.DataFrame(requests.get(base_url + 'concepts/').json()) \n",
     "    concepts = pd.DataFrame.from_records(raw).values.tolist()\n",
     "    return concepts"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'url' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-72b97bdd8a93>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mget_concepts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-2-f42de2fc6b1f>\u001b[0m in \u001b[0;36mget_concepts\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# returns the list of concepts existing in the CBR system\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mget_concepts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mraw\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrequests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0murl\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m'concepts/'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m     \u001b[0mconcepts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfrom_records\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mraw\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtolist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mconcepts\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'url' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "[['Car']]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -57,56 +68,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_attributes(concept):\n",
-    "    raw = pd.DataFrame(requests.get(url + 'concepts/' + concept + '/attributes').json()) \n",
-    "    attributes = pd.DataFrame(raw).reset_index()\n",
+    "    raw = json_normalize(requests.get(base_url + 'concepts/' + concept + '/attributes').json()).T\n",
+    "    attributes = raw.reset_index()\n",
     "    attributes.columns = ['name', 'type']\n",
     "    return attributes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "get_attributes(get_concepts()[0][0]) # returns a dataframe of attribute names and their type existing in the CBR system"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "server = 'localhost'\n",
-    "\n",
-    "port = '8080'\n",
-    "url = 'http://' + server + ':' + port + '/'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def retrieve_k_sim_byID_content(concept, casebase, amalFct, queryID, k):\n",
-    "    raw = pd.DataFrame(requests.get(url + 'concepts/' + concept + '/casebases/' \n",
-    "                                        + casebase + '/retrievalByIDWithContent?amalgamation%20function='+amalFct+'&caseID=' \n",
-    "                                        + queryID + '&k=' + k ).json()) \n",
-    "    results = raw.apply(pd.to_numeric, errors='coerce').fillna(raw).sort_values(by='similarity', ascending=False)\n",
-    "    returned_df = results.apply(pd.to_numeric, errors='coerce').fillna(results)\n",
-    "    return returned_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -130,6 +105,154 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>type</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ZIP</td>\n",
+       "      <td>IntegerDesc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Speed</td>\n",
+       "      <td>IntegerDesc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Color</td>\n",
+       "      <td>SymbolDesc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CCM</td>\n",
+       "      <td>IntegerDesc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Car Code</td>\n",
+       "      <td>IntegerDesc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Miles</td>\n",
+       "      <td>IntegerDesc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Year</td>\n",
+       "      <td>IntegerDesc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Price</td>\n",
+       "      <td>FloatDesc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Doors</td>\n",
+       "      <td>IntegerDesc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Model</td>\n",
+       "      <td>SymbolDesc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Manufacturer</td>\n",
+       "      <td>SymbolDesc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Gas</td>\n",
+       "      <td>SymbolDesc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Body</td>\n",
+       "      <td>SymbolDesc</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Power</td>\n",
+       "      <td>IntegerDesc</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            name         type\n",
+       "0            ZIP  IntegerDesc\n",
+       "1          Speed  IntegerDesc\n",
+       "2          Color   SymbolDesc\n",
+       "3            CCM  IntegerDesc\n",
+       "4       Car Code  IntegerDesc\n",
+       "5          Miles  IntegerDesc\n",
+       "6           Year  IntegerDesc\n",
+       "7          Price    FloatDesc\n",
+       "8          Doors  IntegerDesc\n",
+       "9          Model   SymbolDesc\n",
+       "10  Manufacturer   SymbolDesc\n",
+       "11           Gas   SymbolDesc\n",
+       "12          Body   SymbolDesc\n",
+       "13         Power  IntegerDesc"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_attributes(get_concepts()[0][0]) # returns a dataframe of attribute names and their type existing in the CBR system"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def retrieve_k_sim_byID_content(concept, casebase, amalFct, queryID, k):\n",
+    "    raw = pd.DataFrame(requests.get(base_url + 'concepts/' + concept + '/casebases/' \n",
+    "                                        + casebase + '/amalgamationFunctions/'+amalFct+'/retrievalByCaseIDWithContent?caseID='+ queryID + '&k=' + k ).json()) \n",
+    "    results = raw.apply(pd.to_numeric, errors='coerce').fillna(raw).sort_values(by='similarity', ascending=False)\n",
+    "    returned_df = results.apply(pd.to_numeric, errors='coerce').fillna(results)\n",
+    "    return returned_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>similarity</th>\n",
+       "      <th>caseID</th>\n",
        "      <th>Body</th>\n",
        "      <th>CCM</th>\n",
        "      <th>Car Code</th>\n",
@@ -144,13 +267,13 @@
        "      <th>Speed</th>\n",
        "      <th>Year</th>\n",
        "      <th>ZIP</th>\n",
-       "      <th>caseID</th>\n",
-       "      <th>similarity</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>17_vw</td>\n",
        "      <td>sedan</td>\n",
        "      <td>1900</td>\n",
        "      <td>17</td>\n",
@@ -165,11 +288,11 @@
        "      <td>183</td>\n",
        "      <td>1995</td>\n",
        "      <td>6</td>\n",
-       "      <td>17_vw</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>0.658371</td>\n",
+       "      <td>891_vw</td>\n",
        "      <td>sedan</td>\n",
        "      <td>1900</td>\n",
        "      <td>891</td>\n",
@@ -184,11 +307,11 @@
        "      <td>183</td>\n",
        "      <td>1995</td>\n",
        "      <td>2</td>\n",
-       "      <td>891_vw</td>\n",
-       "      <td>0.658371</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>0.658114</td>\n",
+       "      <td>532_vw</td>\n",
        "      <td>sedan</td>\n",
        "      <td>1900</td>\n",
        "      <td>532</td>\n",
@@ -203,11 +326,11 @@
        "      <td>183</td>\n",
        "      <td>1996</td>\n",
        "      <td>3</td>\n",
-       "      <td>532_vw</td>\n",
-       "      <td>0.658114</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>0.632703</td>\n",
+       "      <td>602_vw</td>\n",
        "      <td>sedan</td>\n",
        "      <td>1900</td>\n",
        "      <td>602</td>\n",
@@ -222,11 +345,11 @@
        "      <td>183</td>\n",
        "      <td>1996</td>\n",
        "      <td>1</td>\n",
-       "      <td>602_vw</td>\n",
-       "      <td>0.632703</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>0.632574</td>\n",
+       "      <td>467_vw</td>\n",
        "      <td>sedan</td>\n",
        "      <td>1900</td>\n",
        "      <td>467</td>\n",
@@ -241,36 +364,33 @@
        "      <td>183</td>\n",
        "      <td>1995</td>\n",
        "      <td>8</td>\n",
-       "      <td>467_vw</td>\n",
-       "      <td>0.632574</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Body   CCM  Car Code      Color  Doors       Gas Manufacturer  Miles  \\\n",
-       "0  sedan  1900        17  dark_blue      4    diesel           vw  71433   \n",
-       "1  sedan  1900       891       blue      4    diesel           vw  68993   \n",
-       "2  sedan  1900       532  dark_blue      4    diesel           vw  13701   \n",
-       "3  sedan  1900       602       blue      4  gasoline           vw  80748   \n",
-       "4  sedan  1900       467  dark_blue      4  gasoline           vw  91911   \n",
+       "  similarity  caseID   Body   CCM  Car Code      Color  Doors       Gas  \\\n",
+       "0        1.0   17_vw  sedan  1900        17  dark_blue      4    diesel   \n",
+       "1   0.658371  891_vw  sedan  1900       891       blue      4    diesel   \n",
+       "2   0.658114  532_vw  sedan  1900       532  dark_blue      4    diesel   \n",
+       "3   0.632703  602_vw  sedan  1900       602       blue      4  gasoline   \n",
+       "4   0.632574  467_vw  sedan  1900       467  dark_blue      4  gasoline   \n",
        "\n",
-       "    Model  Power  Price  Speed  Year  ZIP  caseID similarity  \n",
-       "0  passat     90  22099    183  1995    6   17_vw          1  \n",
-       "1  passat    110  23599    183  1995    2  891_vw   0.658371  \n",
-       "2  passat     90  33199    183  1996    3  532_vw   0.658114  \n",
-       "3  passat    193  26499    183  1996    1  602_vw   0.632703  \n",
-       "4  passat    100  16699    183  1995    8  467_vw   0.632574  "
+       "  Manufacturer  Miles   Model  Power  Price  Speed  Year  ZIP  \n",
+       "0           vw  71433  passat     90  22099    183  1995    6  \n",
+       "1           vw  68993  passat    110  23599    183  1995    2  \n",
+       "2           vw  13701  passat     90  33199    183  1996    3  \n",
+       "3           vw  80748  passat    193  26499    183  1996    1  \n",
+       "4           vw  91911  passat    100  16699    183  1995    8  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Find most similar cases and get the full case content for them\n",
     "retrieve_k_sim_byID_content('Car', 'CaseBase0', 'CarFunc', '17_vw', '5')"
    ]
   },
@@ -284,7 +404,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -298,7 +418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
